# MCLEClient

./: .gitignore  .gitmodules  CMakeLists.txt  COMPILE.md  CONTRIBUTING.md  PORTING.md  README.md
.github/: NOTES.md
.github/workflows/: TU31.yml  nightly.yml  pull-request.yml  release.yml
Minecraft.Client/: AbstractArmorLayer.cpp  AbstractArmorLayer.h  AchievementScreen.cpp  ArmorStandArmorModel.h  ArmorStandModel.cpp  ArmorStandModel.h  CMakeLists.txt  ChatScreen.cpp  ClientConnection.cpp  ClientConnection.h  ClientConstants.cpp  ClientConstants.h  EnderDragonRenderer.cpp  EndermiteModel.cpp  EndermiteRenderer.cpp  Extrax64Stubs.cpp  Font.cpp  GameMode.cpp  GameRenderer.cpp  Gui.cpp  GuiParticles.cpp  GuiParticles.h  HumanoidArmorLayer.cpp  HumanoidArmorLayer.h  HumanoidModel.cpp  ItemFrameRenderer.cpp  ItemInHandLayer.cpp  ItemInHandLayer.h  ItemInHandRenderer.cpp  LivingEntityRenderer.cpp  LocalPlayer.cpp  LocalPlayer.h  MemTexture.h  Minecraft.cpp  Minecraft.h  MinecraftServer.cpp  MinecraftServer.h  ModelPart.cpp  ModelPart.h  MultiPlayerLocalPlayer.cpp  (+30 more)
Minecraft.Client/Common/: App_Defines.h  App_enums.h  Console_Awards_enum.h  Consoles_App.cpp  Consoles_App.h  StringUtils.cpp  StringUtils.h
Minecraft.Client/Common/Audio/: SoundEngine.cpp  SoundNames.cpp
Minecraft.Client/Common/DLC/: DLCSkinFile.cpp  DLCSkinFile.h
Minecraft.Client/Common/Media/: Intro1080.swf  Intro480.swf  Intro720.swf  languages.loc
Minecraft.Client/Common/Network/: GameNetworkManager.cpp  GameNetworkManager.h  PlatformNetworkManagerStub.cpp
Minecraft.Client/Common/Tutorial/: Tutorial.cpp  TutorialEnum.h
Minecraft.Client/Common/UI/: IUIScene_CreativeMenu.cpp  IUIScene_CreativeMenu.h  IUIScene_HUD.cpp  IUIScene_WritingBookMenu.cpp  UIComponent_PressStartToPlay.cpp  UIComponent_PressStartToPlay.h  UIComponent_Tooltips.cpp  UIControl.cpp  UIControl.h  UIControl_LeaderboardList.cpp  UIControl_SaveList.cpp  UIControl_SaveList.h  UIController.cpp  UIController.h  UIEnums.h  UILayer.cpp  UIScene.cpp  UIScene_AchievementsMenu.cpp  UIScene_AchievementsMenu.h  UIScene_BookAndQuillMenu.cpp  UIScene_CreateWorldMenu.cpp  UIScene_Credits.cpp  UIScene_DLCMainMenu.cpp  UIScene_DLCMainMenu.h  UIScene_DLCOffersMenu.cpp  UIScene_DLCOffersMenu.h  UIScene_DeathMenu.cpp  UIScene_DebugOverlay.cpp  UIScene_EnchantingMenu.cpp  UIScene_EndPoem.cpp  UIScene_FullscreenProgress.cpp  UIScene_HUD.cpp  UIScene_HUD.h  UIScene_InGameInfoMenu.cpp  UIScene_JoinMenu.cpp  UIScene_JoinMenu.h  UIScene_LanguageSelector.cpp  UIScene_LeaderboardsMenu.cpp  UIScene_LoadCreateJoinMenu.cpp  UIScene_LoadCreateJoinMenu.h  (+13 more)
Minecraft.Client/Common/XUI/: XUI_Chat.cpp  XUI_DebugOverlay.cpp
Minecraft.Client/PS3/4JLibs/: CMakeLists.txt
Minecraft.Client/PSVitaMedia/: strings.h
Minecraft.Client/Windows64/: KeyboardMouseInput.h  NetworkHelpers.cpp  NetworkHelpers.h  Windows64_App.cpp  Windows64_Launcher.cpp  Windows64_Launcher.h  Windows64_Minecraft.cpp  Windows64_Minecraft.h  Windows64_Xuid.h
Minecraft.Client/Windows64/4JLibs/: .gitignore  CMakeLists.txt  IMPLEMENTATION_GUIDE.md  README.md
Minecraft.Client/Windows64/4JLibs/impls/Windows_Libs/: CMakeLists.txt
Minecraft.Client/Windows64/4JLibs/impls/Windows_Libs/Input/: CMakeLists.txt
Minecraft.Client/Windows64/4JLibs/impls/Windows_Libs/Input/src/: INP_ForceFeedback.cpp  INP_Main.cpp
Minecraft.Client/Windows64/4JLibs/impls/Windows_Libs/Profile/: CMakeLists.txt
Minecraft.Client/Windows64/4JLibs/impls/Windows_Libs/Render/: CMakeLists.txt
Minecraft.Client/Windows64/4JLibs/impls/Windows_Libs/Render/inc/: CompiledShaders.h  Profiler.h  Renderer.h
Minecraft.Client/Windows64/4JLibs/impls/Windows_Libs/Render/shaders/: build.bat  build.cmake  main_PS.hlsl  main_VS.hlsl  screen_PS.hlsl  screen_VS.hlsl
Minecraft.Client/Windows64/4JLibs/impls/Windows_Libs/Render/src/: RendererCBuff.cpp  RendererCore.cpp  RendererMatrix.cpp  RendererState.cpp  RendererTexture.cpp  RendererVertex.cpp
Minecraft.Client/Windows64/4JLibs/impls/Windows_Libs/Storage/: CMakeLists.txt
Minecraft.Client/Windows64/4JLibs/impls/Windows_Libs/Storage/inc/: STO_DLC.h  STO_SaveGame.h  stdafx.h
Minecraft.Client/Windows64/4JLibs/impls/Windows_Libs/Storage/src/: 4J_Storage.cpp  STO_DLC.cpp  STO_SaveGame.cpp
Minecraft.Client/Windows64/Leaderboards/: WindowsLeaderboardManager.cpp  (+1 more)
Minecraft.Client/Windows64Media/: strings.h
Minecraft.Server/: CMakeLists.txt  FourKitNatives.cpp  FourKitRuntime.cpp
Minecraft.Server.FourKit/: CMakeLists.txt  PluginLoader.cs
Minecraft.Server/Console/commands/time/: CliCommandTime.cpp
Minecraft.Server/Security/: ConnectionCipher.cpp  ConnectionCipher.h  EcdhKeyExchange.cpp  EcdhKeyExchange.h  IdentityTokenManager.cpp  RateLimiter.cpp  RateLimiter.h
Minecraft.World/: AABB.cpp  AbstractTreeFeature.h  Achievement.cpp  Achievements.cpp  Achievements.h  AddEntityPacket.cpp  AddIslandLayer.cpp  AddMobPacket.cpp  AddSnowLayer.cpp  Animal.cpp  Animal.h  ArmorItem.h  ArmorStand.cpp  ArmorStandItem.cpp  ArmorStandItem.h  AttributeModifier.cpp  Biome.h  BiomeInitLayer.cpp  BiomeInitLayer.h  BlockBlobFeature.cpp  BlockBlobFeature.h  BlockPos.cpp  Boat.cpp  ButtonTile.cpp  ChestTile.cpp  ChestTile.h  ClothDyeRecipes.cpp  CommonStats.cpp  ComparatorTile.cpp  ComparatorTile.h  ContainerMenu.cpp  CustomPayloadPacket.cpp  CustomPayloadPacket.h  DamageSource.cpp  DamageSource.h  DaylightDetectorTile.h  DeepOceanLayer.cpp  DesertBiome.cpp  Direction.h  DirtTile.cpp  (+143 more)
cmake/: Utils.cmake
(+35 files in other folders)
